# OSpike

./: .gitignore  OSpike.opam  README.md  dune-project  ospike.opam  output
.github/workflows/: config.yml
lib/: buff.ml  buff.mli  buffer.ml  buffer.mli  dune  ospike_lib.ml  parser.ml  parser.mli  parser_options.ml  parser_options.mli  riscv.ml  riscv.mli
src/: buffer.ml  buffer.mli  dune  ospike.ml  parser.ml  parser.mli  riscv.mli  stats.ml  stats.mli  test.txt
test/: command.md  dune  test.txt  test_buffer.ml  test_parser.ml
visualisations/: README.md  plot.py
