opam-version: "2.0"
name: "OSpike"
version: "~dev"
synopsis: "A CLI Tool for working with Spike - the RISC-V ISA Simulator"
maintainer: "patricoferris <patrickferris17@gmail.com>"
authors: "patricoferris <patrickferris17@gmail.com>"
license: "ISC"
homepage: "https://github.com/patricoferris/OSpike"
bug-reports: "https://github.com/patricoferris/OSpike/issues"
depends: [
  "dune" {>= "2.3"}
  "core" 
  "re2"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/patricoferris/OSpike.git"