opam-version: "2.0"
name: "ospike"
synopsis: "A CLI Tool for working with Spike - the RISC-V ISA Simulator"
maintainer: "patricoferris <patrickferris17@gmail.com>"
authors: "patricoferris <patrickferris17@gmail.com>"
license: "ISC"
homepage: "https://github.com/patricoferris/OSpike"
bug-reports: "https://github.com/patricoferris/OSpike/issues"
depends: [
  "dune" {>= "2.3"}
  "core" 
  "re2"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/patricoferris/ospike.git"